# single-file-compaion-rust

./: .env  Cargo.toml  README.md  log4rs.yaml  singlefile_companion.json
.github/workflows/: upload-release.yml
config/mac/: install.sh  uninstall.sh
src/: main.rs
